# cmsc421-final-project

./: .gitignore  Dockerfile  README.md  api.py  chrisMain.py  docker-compose.yml  main.py  pyproject.toml  stevenMain.py  testing.ipynb  testing.py
js_src/: .babelrc  package-lock.json  package.json  tsconfig.json  webpack.config.js
js_src/src/: DisplayComment.tsx  DisplayPost.tsx  ModeSelector.tsx  PostSummary.tsx  ResultsRender.tsx  SearchForm.tsx  SentProgress.tsx  SentResultsRender.tsx  SentimentDisplay.tsx  datastore.js  helpers.tsx  main.tsx
old_individual/: bradyMain.py  bradyWebsite.py  chrisMain.py  pabloMain.py
perf_testing/: testing.ipynb
static/js/: main.min.js  main.min.js.LICENSE.txt  main.min.js.map
templates/: index.html
