[tool.poetry]
name = "cmsc421-final-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
praw = "^7.7.1"
pandas = "^2.2.1"
python-dotenv = "^1.0.1"
flair = "^0.13.1"
pandarallel = "^1.6.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
