[tool.poetry]
name = "cmsc421-final-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
praw = "^7.7.1"
pandas = "^2.2.1"
python-dotenv = "^1.0.1"
flair = "^0.13.1"
pandarallel = "^1.6.5"
Flask = "^3.0.2"
transformers = "^4.40.1"
torch = {version = "^2.3.0+cpu", source = "torch_no_gpu"}
gunicorn = "^22.0.0"
scipy = "<1.13"
nltk = "^3.8.1"
openai = "^1.25.1"

[tool.poetry.dev-dependencies]

[[tool.poetry.source]]
name = "torch_no_gpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
